# changeguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  app.py  change.yaml  index.html  pyproject.toml  requirements.txt  services.yaml
.github/workflows/: changeguard.yml  ci.yml  preflightops.yml
_astro/: index.UO9zEqDm.css  index.Wf98IR0z.css  index.qq1TsUye.css
changeguard/: __init__.py  cli.py  report.py  risk_engine.py  sample_data.py  scanners.py  validators.py
docs/: GITHUB_ACTION.md  RISK_MODEL.md  ROADMAP.md  SCHEMA.md  SCREENSHOTS.md  TICKET_GENERATOR.md
examples/: README.md  change-critical-risk.yaml  change-high-risk.yaml  k8s-risk.yaml  services-critical-risk.yaml  services-high-risk.yaml  terraform-critical.txt  ticket-critical.md
preflightops/: __init__.py  cli.py  integrations.py  report.py  risk_engine.py  sample_data.py  ticket.py
tests/: test_action_yml.py  test_app.py  test_cli.py  test_examples.py  test_integrations.py  test_report.py  test_risk_engine.py  test_scanners.py  test_ticket.py  test_validators.py
