[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "preflightops"
version = "0.1.0"
description = "Pre-deployment risk assessment for SRE, DevOps and Platform Engineering teams."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Pedro Jose Luna Salmon" },
]
keywords = [
    "sre",
    "devops",
    "risk",
    "deployment",
    "ci",
    "terraform",
    "kubernetes",
    "platform-engineering",
    "change-management",
    "production-readiness",
    "incident-prevention",
    "github-actions",
    "rollback",
    "observability",
    "itil",
    "cloud-operations",
]
dependencies = [
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/pedroluna-gh/preflightops"
Repository = "https://github.com/pedroluna-gh/preflightops"
Documentation = "https://github.com/pedroluna-gh/preflightops#readme"
Issues = "https://github.com/pedroluna-gh/preflightops/issues"

[project.optional-dependencies]
# Extras needed only to run the Streamlit web UI (`streamlit run app.py`).
app = [
    "streamlit",
    "pandas",
]
# Extras needed only to run the automated test suite (`pytest`).
test = [
    "pytest",
]

[project.scripts]
preflightops = "preflightops.cli:main"

[tool.setuptools]
packages = ["preflightops"]
